Search page: Added Search submit button, form -method as post and used Html helper to keep search terms visible

--- a/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
+++ b/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
@@ -6,11 +6,17 @@
 
 <h2>Search for a Document</h2>
 
-Document Title: <input type="text" name="DocumentTitle" value=""/><br /><br />
+<form method="post">
+    Document Title:  @Html.TextBox("DocumentTitle")<br /><br />
 
-Document Id: <input type="text" name="DocumentId" value=""/><br /><br />
+    Document Id: @Html.TextBox("DocumentId")<br /><br />
+
+    <input type="submit" value="Search" /><br />
+
+    <div id="grid">
+        @grid.GetHtml()
+    </div>
+
+</form>
 
 
-<div id="grid">
-    @grid.GetHtml()
-</div>
