--- a/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
+++ b/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
@@ -14,7 +14,14 @@
     <input type="submit" value="Search" /><br />
 
     <div id="grid">
-        @grid.GetHtml()
+        @grid.GetHtml( columns: grid.Columns(
+       grid.Column("DocumentTitle", "Document Title"),
+       grid.Column("DocumentId", "Document Id"),
+       grid.Column("FileName", "File"), 
+       grid.Column(header: "Download", format: @<input type="button" class="download" value="Download File"/>)
+       
+
+       ))
     </div>
 
 </form>
