Seperate web model (does not include file) that allows quicker DocumentSearchPage loading

--- a/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
+++ b/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Document_Management_Solution.Models.DocumentModel>
+﻿@model List<Document_Management_Solution.Models.WebDocumentModel>
 @{
     ViewBag.Title = "DocumentSearch";
     var grid = new WebGrid(Model);
