--- a/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
+++ b/Document Management Solution/Views/Home/DocumentSearchPage.cshtml
@@ -8,15 +8,13 @@
 <h2>Search for a Document</h2>
 
 <form method="post">
-    Document Title:  @Html.TextBox("DocumentTitle")<br /><br />
+    <span class="inputLabel">Document Title:</span>  @Html.TextBox("DocumentTitle")<br /><br />
 
-    Document Id: @Html.TextBox("DocumentId")<br /><br />
+    <span class="inputLabel">Document Id:</span> @Html.TextBox("DocumentId")<br /><br />
 
     <input type="submit" value="Search" /><br />
 
-
-
-</form>
+</form><br /><br />
 
 <div id="grid">
 
