--- a/Document Management Solution/Views/Home/DocumentUploadPage.cshtml
+++ b/Document Management Solution/Views/Home/DocumentUploadPage.cshtml
@@ -6,11 +6,11 @@
 <h2>Upload a Document</h2>
 
 <form action="~/Home/UploadDocument" method="post" enctype="multipart/form-data">
-    Title:       <input type="text" name="DocumentTitle" value="" /><br /><br />
+    <span class="inputLabel">Title:</span>       <input type="text" name="DocumentTitle" value="" /><br /><br />
 
-    Document Id: <input type="text" name="DocumentId" value="" /><br /><br />
+    <span class="inputLabel">Document Id:</span> <input type="text" name="DocumentId" value="" /><br /><br />
 
-    Upload document: <input type="file" name="upload" /><br /><br />
+    <input type="file" name="upload" /><br />
 
     <input type="submit" value="Submit Document" />
 
