--- a/Document Management Solution/Views/Home/Index.cshtml
+++ b/Document Management Solution/Views/Home/Index.cshtml
@@ -2,3 +2,4 @@
     ViewBag.Title = "Home Page";
 }
 
+<p>This is a simple Document Management System application. Follow the navigation links to upload and search.</p>
