--- a/Document Management Solution/Views/Shared/_Layout.cshtml
+++ b/Document Management Solution/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Document Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Document Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand"})
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Search", "DocumentSearchPage", "Home")</li>
-                    <li>@Html.ActionLink("Upload", "DocumentUploadPage", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Search", "DocumentSearchPage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Upload", "DocumentUploadPage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                 </ul>
             </div>
         </div>
